python1/aiai-master/aiai-master/New Text Document.txt


variable & string

num1=2.5

num2=2.5

sum=float(num1)+float(num2)

print(sum)

5.0

# variable

a,b,c = 10,15,20

print(a)

print(b)

print(c)

10
15
20

# float

a,b,c =10,8,7

float_1 = 5.5

print(a,c,b)

print(float_1)

?

(10, 7, 8)
5.5

substarct number

a=10

b=15

sum=a-b

print(sum)

-5

a = 20

print ("a=",20)

a = "high twenty"

print ("a =", a)

('a=', 20)
('a =', 'high twenty')

variable operator

x=25

y=15

print(x+y)

print(x-y)

print(x*y)

print(x/y)

print(x//y)

print(x%y)

print(x**y)

40
10
375
1
1
10
931322574615478515625

input from user

inputstring = input('enter a sentence:')

print ('the input string is :')

enter a sentence:word


NameErrorTraceback (most recent call last)
<ipython-input-1-1c62527e5fcc> in <module>()
----> 1 inputstring = input('enter a sentence:')
      2 print ('the input string is :')

C:\Users\shahadat\Anaconda2\lib\site-packages\ipykernel\ipkernel.pyc in <lambda>(prompt)
    174             self._sys_eval_input = builtin_mod.input
    175             builtin_mod.raw_input = self.raw_input
--> 176             builtin_mod.input = lambda prompt='': eval(self.raw_input(prompt))
    177         self._save_getpass = getpass.getpass
    178         getpass.getpass = self.getpass

C:\Users\shahadat\Anaconda2\lib\site-packages\ipykernel\ipkernel.pyc in <module>()

NameError: name 'word' is not defined

conversion

num_int=123

num_flo=12.3

num_int=num_int+num_flo

print("value of num_new:",num_new)

print("datatype of num_new:",type(num_new))


NameErrorTraceback (most recent call last)
<ipython-input-28-63bbc6f3d997> in <module>()
      2 num_flo=12.3
      3 num_int=num_int+num_flo
----> 4 print("value of num_new:",num_new)
      5 print("datatype of num_new:",type(num_new))

NameError: name 'num_new' is not defined

numeric types

# output:<class>

print(type(10))

# output: <class>

print(type(10.0))

# <class>

c=10+5j

print(type(c))</class></class></class>

  File "<ipython-input-2-557cb08c7266>", line 7
    print(type(c))</class></class></class>
                   ^
SyntaxError: invalid syntax


tuples

language = ["franch","bangladesh","india","pakistan"]

print(language[1])

print(language[3])

?

bangladesh
pakistan

my_string='hello'

print(my_string =Hello

     print)(my_string)

  File "<ipython-input-1-c9d0a16cfdaa>", line 2
    print(my_string =Hello
                    ^
SyntaxError: invalid syntax


number

number = range(1, 6)

print(list(numbers))

print(tuple(numbers))

print(set(numbers))

print(dict.fromkeys(numbers,99))


NameErrorTraceback (most recent call last)
<ipython-input-2-50395fbdccae> in <module>()
      1 number = range(1, 6)
----> 2 print(list(numbers))
      3 print(tuple(numbers))
      4 print(set(numbers))
      5 print(dict.fromkeys(numbers,99))

NameError: name 'numbers' is not defined

if else statement

num = 3

if num > 2:

      print("positive.")

else 

   print("negative.")

  File "<ipython-input-15-015525c5b467>", line 4
    else
         ^
SyntaxError: invalid syntax


find largest number

a=50

b=25

c=3

if (a > = b) and (a > = c):

    largest=a

    else

        largest=b

        else

            largest=c

            print("the largest number between","a","b","c".is largest)

  File "<ipython-input-32-c4b8a3958b3e>", line 4
    if (a > = b) and (a > = c):
            ^
SyntaxError: invalid syntax


if else

number = 10

if number > 2:

print("positive")

else number < 5

print("negetive")

?

  File "<ipython-input-18-887c41e1d503>", line 3
    print("positive")
        ^
IndentationError: expected an indented block


while loop

n= 200

sum = 0

i = 1

whil i <=n:

    sum = sum+i

    i=i+1

    print("the sum is",sum)

  File "<ipython-input-11-9f14c23afc72>", line 4
    whil i <=n:
         ^
SyntaxError: invalid syntax


for loop

numbers=[6,5,3,8,4,2]

sum=0

for val in numbers:

    sum = sum+val

    print("the sum is",sum)

('the sum is', 6)
('the sum is', 11)
('the sum is', 14)
('the sum is', 22)
('the sum is', 26)
('the sum is', 28)

for loop

numbers=[10,5,13,8,4,9]

sum=2

for val in numbers:

    sum = sum+val

    print(sum)

12
17
30
38
42
51

break statement

for val in "shahadat":

    if val =="h":

        break

        print(val)

        print("the end")

def add_numbers(a,b):

    sum = a+b

    print (sum)

    add_numbers(4,5)

recursion function

def calc_factorial(x)

    if x== 1:

        return 1

    else:

        return (x * calc_factorial(-1))

    num = 6

    print("the factorial of",num,"is",calc_factorial(num))

  File "<ipython-input-22-7f1d1d52fe9e>", line 1
    def calc_factorial(x)
                         ^
SyntaxError: invalid syntax


calculator

def add (x,y):

return x+y

def subtract(x,y):

return x-y

def multiply (x,y):

return x*y

def divide(x,y):

return x/y

print("select operation.")

print("1.add")

print("2.subtract")

print("3.multiply")

print("4.divide")

num1=int(input("fast number"))

num2=int(input("second number"))

if choice=='1':

    print (num1,"+",num2,"=",add(num1,num2))

    else choice=='2':

        print (num1,"-",num2,"=",sub(num1,num2))

        else choice=='3':

            print (num1,"*",num2,"=",multiply(num1,num2))

            else choice=='4':

                print(num1,"/",num2,"=",divide(num1,num2))

                else:

                    print("invalid input")

  File "<ipython-input-34-2aee37ffe756>", line 2
    return x+y
         ^
IndentationError: expected an indented block


?

